crates/reinhardt-pages/tests/ui/style/fail/invalid_function_arguments.rs
use reinhardt_pages::{style_def};

#[style_def]
static STYLES: CardStyles = style! { .card { transform: rotate(1px); } };
fn main() {}
